<resources>
    <string name="app_name">OneMusicPlayer</string>


    <string name="shuffle_btn">Shuffle</string>
    <string name="favourites_btn">Favourites</string>
    <string name="playlist_btn">Playlist</string>

    <string name="total_song">Total Songs</string>
    <string name="world_of_music">World Of Music</string>
    <string name="song_name">Song Name</string>
    <string name="back_btn">Back</string>

    <string name="start_tv">00:00</string>
    <string name="end_tv">Loading...</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_icon">Icon</string>
    <string name="text_nav">Welcome to,\nWorld of Music</string>

    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="duration">00.00</string>
    <string name="albumName">Al bumName</string>

    <string name="min_15">15 Minutes</string>
    <string name="min_30">30 Minutes</string>
    <string name="min_60">60 Minutes</string>
    <string name="search_view">Search View</string>
    
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="song..img">Song Image</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="playlist_delete">Playlist Delete</string>
    <string name="user_name">Your Name</string>
    <string name="Add">add_song</string>
    <string name="remove_all">Remove All</string>
    <string name="search_song">Search Song</string>
    <string name="topic_feedback">Topic i.e. suggestion,Error etc</string>
    <string name="email_feedback">Email Address(Optional)</string>
    <string name="send">Send</string>
    <string name="set_theme">Set Theme</string>
    <string name="sort_by">Sort By</string>
    <string name="version_name">Version Name</string>


</resources>