<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="5dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageMv"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:src="@mipmap/music_player_icon"
        app:layout_constraintBottom_toBottomOf="@+id/songAlbumMv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/songNameMv"
        app:layout_constraintVertical_bias="0.0"
        app:shapeAppearanceOverlay="@style/curved" />



    <TextView
        android:id="@+id/songNameMv"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:maxWidth="250dp"
        android:textColor="@color/black"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/song_name"
        app:layout_constraintStart_toEndOf="@+id/imageMv"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/songAlbumMv"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:singleLine="true"
        android:maxWidth="60dp"
        android:textAlignment="center"
        android:gravity="center"
        android:foregroundGravity="center"
        android:text="@string/albumName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/songNameMv"
        app:layout_constraintTop_toBottomOf="@+id/songNameMv" />

    <TextView
        android:id="@+id/songDurationMv"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:padding="5dp"
        android:text="@string/duration"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="@+id/songAlbumMv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/songNameMv"
        app:layout_constraintVertical_bias="0.483" />

    <ImageView
        android:id="@+id/play_img_MV"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/plat_icon"
        app:tint="@color/cool_pink"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>