<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:fitsSystemWindows="true"
    tools:openDrawer="start"
    android:background="@drawable/gradient_blue"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/shuffle"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/shuffle_icon"
                    android:text="@string/shuffle_btn"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/favourite"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/favourite"
                    android:text="@string/favourites_btn"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/playlist"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/playlist"
                    android:text="@string/playlist_btn"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_song"
                android:textColor="@color/black"
                android:layout_margin="10dp"
                android:id="@+id/total_song"
                />


            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                android:scrollbarThumbVertical="@drawable/scroll_bar_icon"
                android:id="@+id/main_player_rec"/>


        </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nowPlaying"
            android:name="com.example.onemusicplayer.NowPlayingFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBottomOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout="@layout/fragment_now_playing" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_vieww"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity = "start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_hader"
        app:menu="@menu/nav_menu"/>




</androidx.drawerlayout.widget.DrawerLayout>