<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlaylistDetail">



    <LinearLayout
        android:id="@+id/linearPD"
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="?attr/themeColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:src="@drawable/arrow_back_icon"
            android:backgroundTint="@android:color/transparent"
            android:id="@+id/back_btnPD"
            app:tint="@color/white"/>

        <TextView
            android:id="@+id/playlist_name_PD"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/playlist_btn"
            android:textSize="24sp"
            android:paddingBottom="5dp"
            android:textColor="@color/white"
            android:gravity="center"
            android:singleLine="true"
            android:textStyle="bold"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/sec_linear_PD"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:background="?attr/themeColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearPD">


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/playList_img_PD"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:src="@drawable/splash_screen"/>

        <TextView
            android:id="@+id/more_songName_PD"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/playlist_name"
            android:gravity="start|center"
            android:layout_marginHorizontal="5dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playlist_rec_PD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sec_linear_PD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scrollbarThumbVertical="@drawable/scroll_bar_icon"
        android:scrollbars="vertical"
        android:layout_marginTop="10dp"
        android:paddingBottom="288dp"/>


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/shuffle_Btn_PD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:icon="@drawable/shuffle_icon"
        app:iconSize="35dp"
        app:iconTint="?attr/themeColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.88"
        app:strokeColor="?attr/themeColor"
        app:strokeWidth="3dp"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/add_btnPD"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableLeft="@drawable/add_icon"
            android:text="@string/Add"
            android:drawableTint="?attr/themeColor"
            android:textAllCaps="false"
            android:textColor="@color/black" />



        <Button
            android:id="@+id/removeAll_btnPD"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTint="?attr/themeColor"
            android:drawableLeft="@drawable/remove_icon"
            android:text="@string/remove_all"
            android:textAllCaps="false"
            android:textColor="@color/black" />

    </LinearLayout>








</androidx.constraintlayout.widget.ConstraintLayout>