<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".SetttingsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
         android:text="@string/set_theme"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="2dp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white"
        android:orientation="horizontal">
        
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/coolPink_theme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/circle_icon"
            android:tint="@color/cool_pink"/>

   <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/coolBlue_theme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/circle_icon"
            android:tint="@color/cool_blue"/>

   <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/coolGreen_theme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/circle_icon"
            android:tint="@color/cool_green"/>

   <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/coolPurple_theme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/circle_icon"
            android:tint="@color/purple_700"/>

   <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/coolBlack_theme"
            android:layout_width="0dp"
       android:background="@color/white"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/circle_icon"
            android:tint="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginVertical="2dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:paddingHorizontal="16dp">


        <TextView
            android:id="@+id/sortBy_SE"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:background="@color/white"
            android:text="@string/sort_by"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:gravity="center|start"
            android:paddingLeft="5dp"
            />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/sort_img_btn"
            android:layout_width="50dp"
            android:background="@color/white"
            android:layout_height="match_parent"
            android:src="@drawable/sort_by_icon"
            app:tint="@color/cool_pink"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/version_Name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:text="@string/version_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:padding="16dp"/>


</LinearLayout>