<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/gradient_blue"
    android:orientation="vertical"
    tools:context=".PlayerActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            >

            <ImageButton
                android:id="@+id/backButtonPA"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_weight="2"
                android:background="@android:color/transparent"
                android:src="@drawable/arrow_back_icon"
                android:padding="5dp"
                app:tint="@color/black"
                tools:ignore="ContentDescription,NestedWeights" />

            <TextView
                android:id="@+id/appBarTitlePA"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/world_of_music"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/favouriteButtonPA"
                android:layout_width="match_parent"
                android:backgroundTint="@android:color/transparent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"

                android:layout_weight="2"
                android:background="@color/white"
                android:src="@drawable/fav_empty_icon"
                app:tint="@color/cool_pink"

                tools:ignore="ContentDescription" />
        </LinearLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_margin="10dp"
            android:scaleType="fitCenter"
            android:id="@+id/song_imagePA"
            android:src="@drawable/splash_screen"
            app:shapeAppearanceOverlay="@style/curved"
            app:strokeWidth="5dp"
            app:strokeColor="@color/cool_blue"/>

        <TextView
            android:id="@+id/song_namePA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/song_name"
            android:gravity="center"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            >

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="25dp"
                app:iconSize="40dp"
                android:id="@+id/song_backPA"
                app:icon="@drawable/back_aaa" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:iconSize="50dp"
                android:id="@+id/song_play_pausePA"
                app:iconTint="@color/white"
                app:shapeAppearanceOverlay="@style/curved"
                android:backgroundTint="@android:color/holo_red_light"
                app:icon="@drawable/pause_icon" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:iconSize="40dp"
                android:id="@+id/song_nextPA"
                android:layout_marginLeft="25dp"
                app:icon="@drawable/next_aaa" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:id="@+id/tv_seekBar_start"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/start_tv"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:gravity="center"
                />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/song_seek_barPA"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="6"/>

            <TextView
                android:id="@+id/tv_seekBar_end"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|start"
                android:text="@string/end_tv"
                android:textSize="15sp"
                android:textColor="@color/black"
                />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/timer_btnPA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:tint="@color/cool_pink"
                android:background="@android:color/transparent"
                android:src="@drawable/timer_icon"/>

            <ImageButton
                android:id="@+id/repeat_btnPA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:tint="@color/cool_pink"
                android:background="@android:color/transparent"
                android:src="@drawable/repeat_icon"/>

            <ImageButton
                android:id="@+id/equalizer_btnPA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:tint="@color/cool_pink"
                android:background="@android:color/transparent"
                android:src="@drawable/eqalizer_icon"/>

            <ImageButton
                android:id="@+id/share_btnPA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:tint="@color/cool_pink"
                android:background="@android:color/transparent"
                android:src="@drawable/share_icon"/>


        </LinearLayout>


    </LinearLayout>

